apps/tachtit/open-webui/httproute-local.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-local
  annotations:
    external-dns.alpha.kubernetes.io/hostname: openwebui.local.seyzahl.com
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
  hostnames:
    - openwebui.local.seyzahl.com
  rules:
    - backendRefs:
        - name: open-webui
          port: 8080
